--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel='stylesheet' type='text/css' href='./priv/static/gludoku.css' />
 
         <title>01-basics/01-hello-world</title>
 
