--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel='stylesheet' type='text/css' href='./index.css' />
         <link rel='stylesheet' type='text/css' href='./priv/static/gludoku.css' />
 
         <title>01-basics/01-hello-world</title>
 
-        <link rel="stylesheet" href="/priv/static/app.css" />
+        <!-- <link rel="stylesheet" href="/priv/static/app.css" /> -->
         <script type="module" src="/priv/static/gludoku.mjs"></script>
     </head>
 
